# FrostZone

./: .gdbinit  .gdbinit-core1  .gitignore  Makefile  README.md  format-var.sh  format_var.jlink  reset.jlink  reset.sh  stm32h5-pinout.md
frosted/: CMakeLists.txt  Kconfig  Makefile  PROGRESS_AUDIT.md  bflt.c  build.sh  cirbuf.c  device.c  fbcon.c  flash_kernel.jlink  flashfs.c  fpb.c  framebuffer.c  frosted.c  frosted_rp2350.c  frosted_stm32h563.c  frosted_stm32u585.c  getaddrinfo.c  gpio_registry.c  ili9341_spi.c  install.sh  jedec_spi_flash.c  kernel.elf  kernel.hex  kernel.ld  locks.c  mdns.c  memfs.c  module.c  mpu.c  mutex.S  netd_stub.c  ns_main.c  null.c  pico2350.ld  pipe.c  pool.c  privileged_alloc.c  pty.c  scheduler.c  (+27 more)
frosted-headers/include/: dlfcn.h
frosted-headers/include/sys/: frosted-io.h
frosted-headers/include/sys/fs/: xipfs.h
frosted-headers/sys/: frosted_syscalls.c
frosted/fonts/: cga_8x8.c
frosted/include/: bflt.h  board_stm32h563.h  board_stm32u585.h  board_stm32x5.h  cirbuf.h  config.h  dma.h  eth.h  exti.h  fcntl.h  flashfs.h  fonts.h  fpb.h  framebuffer.h  frosted.h  frosted_api.h  heap.h  interrupts.h  jedec_spi_flash.h  kprintf.h  ksnprintf.h  locks.h  lowpower.h  malloc.h  mdns.h  mempool.h  mpu.h  mpu_armv8.h  net.h  nvic.h  pool.h  socket_in.h  spi.h  stat.h  stddef.h  stdint.h  stm32crypto.h  stm32h5xx.h  string.h  syscalls.h  (+6 more)
frosted/include/sys/: frosted-io.h
frosted/lib/: tinyusb
frosted/lib/tinyusb-0.18.0/src/osal/: osal_none.h
frosted/lib/tinyusb-0.18.0/src/portable/raspberrypi/rp2040/: dcd_rp2040.c  rp2040_usb.c
frosted/libc/include/: flat.h  inttypes.h  poll.h  signal.h
frosted/libc/include/frosted/: netlink.h  rtnetlink.h
frosted/libc/include/net/: if.h  route.h
frosted/libc/include/sys/: fcntl.h  ptrace.h  signal.h  socket.h  stat.h  wait.h
frosted/rp2350/: pico.h
nsc-gateway/: taskmem.h
scripts/: bin_to_ihex.py  build_frosted_rp2350.sh  build_jedec_pylibs.sh  build_supervisor_rp2350.sh  configure_stm32h5_option_bytes.sh  debug_python.gdb  flash_all_stm32h5.sh  format_jedec_flashfs.sh  hardfault_diag.gdb  hardfault_diag.sh  install_frosted_rp2350.sh  install_supervisor_rp2350.sh  mkflashfs.py
secure-supervisor/: CMakeLists.txt  Kconfig  Makefile  build.sh  flash-write.c  flash_hypervisor.jlink  gdb.out  install.sh  ivt.c  mempool.c  mpu.c  random.c  rp2350.c  secrets.c  secure-supervisor.ld  secure_main.c  sg.c  startup_secure.c  stm32h563.ld  stm32u585.ld  task.c
secure-supervisor/arch/: README.md
secure-supervisor/arch/rp2350/: rp2350.c
secure-supervisor/arch/stm32_common/: stm32_common.h
secure-supervisor/arch/stm32h563/: clock.c  machine_init.c  stm32h563_regs.h
secure-supervisor/arch/stm32u585/: STM32U585.ld  machine_init.c  stm32u5xx_hal_stub.h
secure-supervisor/include/: armv8m_tz.h  flash_ops.h  limits.h  mempool.h  mpu_armv8.h  mpu_struct.h  random.h  stm32h563.h  task.h
secure-supervisor/port/rp2350/: .gdbinit
secure-supervisor/tests/: Makefile  unit_mempool.c
userland/: Makefile  flash_userspace.jlink  install.sh  xipfstool
userland/binutils/: FRESH_REVIEW.md  Makefile  aes128.c  apps.mk  cat.c  cp.c  cut.c  df.c  du.c  ecdsa.c  file.c  fresh.c  gdb-remote.c  gdb-server.c  gen_makefile.py  grep.c  head.c  hexdump.c  icebox.c  idling.c  init.c  kill.c  kilo.c  ls.c  mount.c  mv.c  reboot.c  sha256sum.c  sleep.c  sqlite.c  stat.c  strace.c  tail.c  tee.c  uptime.c  xxd.c
userland/frosted-headers/sys/: frosted_syscalls.c
userland/games/: Makefile  life.c
userland/hw-utils/: Makefile
userland/kconfig/: .config  .config.old  Kconfig  check.sh
userland/kconfig/lxdialog/: check-lxdialog.sh  util.c
userland/lib/: .gitignore  Makefile  dltest.exports  dltest_lib.c  frosted_crypto_wrappers.c  frosted_rng.c  shlib-elf2flt-dltest.ld  shlib-elf2flt.ld  sqlite.exports  sqlite_posix_stubs.c  sqlite_runtime.c  stm32h5_hal.c  stm32h5xx_hal.h  stm32h5xx_hal_conf.h  stm32h5xx_hal_pka.h  user_settings.h  wolfssl.exports  wolfssl_runtime.c  wolfssl_stubs.c
userland/lnk/: cat
userland/micropython/extmod/: vfs_posix.c
userland/micropython/mpy-cross/: Makefile  mpconfigport.h
userland/micropython/ports/unix/: CFLAGS  input.c  main.c
userland/micropython/ports/unix/variants/frosted/: dlfcn_self.c  mpconfigvariant.h  mpconfigvariant.mk  stubs.c
userland/micropython/py/: mkrules.mk
userland/micropython/shared/readline/: readline.c
userland/netutils/: Makefile  dhclient.c  host.c  httpd.c  ifconfig.c  ip.c  nc.c  net_compat.h  ntpc.c  ping.c  route.c  sha256.c  sshd.c  sshd_hostkey.h  sshd_wolfssh_settings.h  starwars.c  telnetd.c
userland/sh/: init.sh  test-crypto.sh
userland/tests/: Makefile  dlopen_test.c  phase0_memfs.c  tz_guard_demo.c
userland/xipfs/: xipfs-ls  xipfs-ls.c  xipfs.c
